# telegram_bot_template

./: .gitignore  manage.py  pyproject.toml  requirements.txt
telegram_bot_template/: asgi.py  settings.py  urls.py  wsgi.py
