[tool.poetry]
name = "telegram-bot-template"
version = "0.1.0"
description = "Django template for easily create telegram bot"
authors = ["Adam Alidibirov <85851465+markarenin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
